Apply base layer styling to body and main

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,17 +1,20 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 @layer base {
-  body {
-    @apply scroll-smooth;
-  }
+    body {
+        @apply m-0 flex flex-col scroll-smooth bg-sky-200;
+    }
+    main {
+        @apply pr-2 pl-2;
+    }
 }
 
 @theme {
-  --font-sans:
-    ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-    "Segoe UI Symbol", "Noto Color Emoji";
-  --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
-  --font-mono:
-    ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
-    "Courier New", monospace;
+    --font-sans:
+        ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji',
+        'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+    --font-serif: ui-serif, Georgia, Cambria, 'Times New Roman', Times, serif;
+    --font-mono:
+        ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
+        'Liberation Mono', 'Courier New', monospace;
 }
